===========================

*Release date: XXXX-XX-XX*

*Not yet released, see sections below for changes released in 3.3.0*

Core and Builtins
-----------------

- Issue #17619: Make input() check for Ctrl-C correctly on Windows.

- Issue #17610: Don't rely on non-standard behavior of the C qsort() function.

- Issue #17357: Add missing verbosity output when using -v/-vv.

Library
-------

- Issue #14254: IDLE now handles readline correctly across shell restarts.

- Issue #17614: IDLE no longer raises exception when quickly closing a file.

- Issue #6698: IDLE now opens just an editor window when configured to do so.

- Issue #8900: Using keyboard shortcuts in IDLE to open a file no longer
  raises an exception.

- Issue #6649: Fixed missing exit status in IDLE. Patch by Guilherme Polo.

- Issue #17435: threading.Timer's __init__ method no longer uses mutable
  default values for the args and kwargs parameters.

- Issue #17526: fix an IndexError raised while passing code without filename to
  inspect.findsource().  Initial patch by Tyler Doyle.

Documentation
-------------

- Issue #15940: Specify effect of locale on time functions.


What's New in Python 3.3.1?
===========================

*Release date: 07-Apr-2013*

Core and Builtins
-----------------

- Issue #17328: Fix possible refleak in dict.setdefault.

- Issue #17223: array module: Fix a crasher when converting an array containing
  invalid characters (outside range [U+0000; U+10ffff]) to Unicode:
  repr(array), str(array) and array.tounicode(). Patch written by Manuel Jacob.

- Issue #17223: Fix PyUnicode_FromUnicode() for string of 1 character outside
  the range U+0000-U+10ffff.

- Issue #1692335: Move initial args assignment to
  BaseException.__new__ to help pickling of naive subclasses.

- Issue #17275: Corrected class name in init error messages of the C version of
  BufferedWriter and BufferedRandom.

- Issue #7963: Fixed misleading error message that issued when object is